# pomodorust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pomodorust.rb  settings.local.json  tasks.md  temp_build.yml
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml
.serena/: project.yml
src/: app.rs  db.rs  lib.rs  main.rs  settings.rs  theme.rs
src/app/: mod.rs  task.rs  types.rs  ui_state.rs
src/settings/: mod.rs  theme.rs
src/ui/: details.rs  mod.rs  notes_modal.rs  settings.rs  statistics.rs  task_list.rs  timer.rs
tests/: app_test.rs  mod.rs  settings.rs  settings_test.rs  theme.rs  theme_test.rs
tests/app/: mod.rs  settings.rs  stats.rs  task.rs  timer.rs
