[package]
name = "pomodorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
chrono = { version = "0.4.41", features = ["serde"] }
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
directories = "6.0.0"
serde_json = "1.0.140"
notify-rust = "4.11.7"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.13"

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture arm64",
    "apt-get update && apt-get --assume-yes install libasound2-dev:arm64",
]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt-get update && apt-get --assume-yes install libasound2-dev",
]
